<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UFC Fighter App</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="wins">Wins</string>
    <string name="wko">KO</string>
    <string name="wsub">Sub</string>
    <string name="wd">Decision</string>
    <string name="losses">Losses</string>
    <string name="prev">Prev Fights</string>
    <string name="titles">Titles</string>
    <string name="fighter_search">Search for a fighter</string>
    <string name="fighter_picture_description">Figher Photo</string>
    <string name="fighter_default_stats">0</string>
    <string name="event_header">Event Header</string>
    <string name="event_list_header">Upcoming UFC events</string>
    <string name="vs">vs.</string>
    <string name="one">You haven\'t selected a fighter yet</string>
    <string name="two">You haven\'t selected a second fighter yet</string>
    <string name="fight_history_header">Fight History</string>
    <string name="previous_fight_header">Previous Fights</string>
    <string name="comparison_fight_header">Comparison Fights</string>
    <string name="opponent">Opponent</string>
    <string name="winner">Winner</string>
    <string name="result">Result</string>
    <string name="decision">Decision</string>
    <string name="round">Round</string>
    <string name="time">Time</string>

</resources>