<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
   <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
	        
	    <ImageView
	        android:id="@+id/fighterPic1"
	        android:layout_width="150dp"
	        android:layout_height="100dp"
	        android:layout_marginTop="5dp"
	        android:contentDescription="@string/fighter_picture_description"
	        android:gravity="center_horizontal" />    
	    <ImageView
	        android:id="@+id/fighterPic2"
	        android:layout_width="150dp"
	        android:layout_height="100dp"
	        android:layout_marginTop="5dp"
	        android:contentDescription="@string/fighter_picture_description"
	        android:gravity="center_horizontal"
	        android:layout_alignParentRight="true" /> 
	        
	</RelativeLayout>

    

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:paddingLeft="10dp"
            android:text="@string/name"
            android:textSize="@dimen/profile_text_size"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/name"
            android:textSize="@dimen/profile_text_size"
            android:textStyle="bold"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/wins1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/wko_label"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_text_size" />
        
        <TextView
            android:id="@+id/wins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name1"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:text="@string/wins"
            android:textSize="@dimen/profile_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wins2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/wko_label"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_text_size" />

        <TextView
            android:id="@+id/wko1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wko_label"
            android:layout_alignBottom="@+id/wko_label"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_subtext_size" />
        
        <TextView
            android:id="@+id/wko_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wins_label"
            android:layout_below="@+id/wins_label"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/wko"
            android:textSize="@dimen/profile_subtext_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wko2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wko_label"
            android:layout_alignBottom="@+id/wko_label"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_subtext_size" />

        <TextView
            android:id="@+id/wsub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wsub_label"
            android:layout_alignBottom="@+id/wsub_label"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_subtext_size" />
        
        <TextView
            android:id="@+id/wsub_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wko_label"
            android:layout_below="@+id/wko_label"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/wsub"
            android:textSize="@dimen/profile_subtext_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wsub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wsub_label"
            android:layout_alignBottom="@+id/wsub_label"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_subtext_size" />

        <TextView
            android:id="@+id/wd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wd_label"
            android:layout_alignBottom="@+id/wd_label"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_subtext_size" />
        
        <TextView
            android:id="@+id/wd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wsub_label"
            android:layout_below="@+id/wsub_label"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/wd"
            android:textSize="@dimen/profile_subtext_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wd_label"
            android:layout_alignBottom="@+id/wd_label"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_subtext_size" />

        <TextView
            android:id="@+id/losses1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/losses_label"
            android:layout_alignBottom="@+id/losses_label"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_text_size" />
        
        <TextView
            android:id="@+id/losses_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wd_label"
            android:layout_below="@+id/wd_label"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:text="@string/losses"
            android:textSize="@dimen/profile_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/losses2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/losses_label"
            android:layout_alignBottom="@+id/losses_label"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="@string/fighter_default_stats"
            android:textSize="@dimen/profile_text_size" />


    </RelativeLayout>

</LinearLayout>